--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,3 +48,21 @@ h1 {
   margin-top: -.25em;
   margin-bottom: 2em;
 }
+
+
+.no-space {
+  padding: 0;
+  margin: 0;
+}
+
+.wide-container {
+    max-width: 1370px;
+}
+
+.lead {
+  margin-bottom: 20px;
+  font-size: 26px;
+  font-weight: 200;
+  line-height: 1.4;
+}
+
