--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,3 +69,27 @@ h1 {
 .masthead {
   background-color:#3498DB;
 }
+
+.masthead-alt {
+  background-color:#3498DB;
+  margin-bottom: 0;
+  text-align:center;
+}
+
+.pastpage {
+  background-color:#3498DB;
+  color:white;
+}
+
+.pastpage a:link, 
+.pastpage a:visited, 
+.pastpage a:hover, 
+.pastpage a:active {
+  color:white;
+  font-weight:bold;
+}
+
+.date {
+  font-size:16px;
+  font-style:italic;
+}
